// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching.gqlConnection should fetch the whole connection in chunks 1`] = `
Array [
  Object {
    "loc": "one",
  },
]
`;

exports[`fetching.gqlConnection should fetch the whole connection in chunks 2`] = `
Array [
  Object {
    "loc": "two",
  },
]
`;

exports[`fetching.gqlConnection should fetch the whole connection in chunks 3`] = `
Array [
  Object {
    "loc": "three",
  },
]
`;

exports[`fetching.gqlConnection should fetch the whole connection in chunks 4`] = `
Array [
  Object {
    "loc": "four",
  },
]
`;

exports[`fetching.gqlConnection should retry at least 3 times on error 1`] = `
Array [
  Object {
    "loc": "one",
  },
]
`;

exports[`fetching.gqlConnection should retry at least 3 times on error 2`] = `
Array [
  Object {
    "loc": "two",
  },
]
`;

exports[`fetching.gqlConnection should stop retrying after 3 times on error and then throw 1`] = `
Array [
  Object {
    "loc": "one",
  },
]
`;
